--- a/content/posts/abc.mdx
+++ b/content/posts/abc.mdx
@@ -1,205 +1,227 @@
 ---
-title: Dynamic Routing and Static Regeneration
-description: How to use incremental static regeneration using dynamic routes.
-date: "2023-03-04"
+title: Deploying Next.js Apps
+description: How to deploy your Next.js apps on Vercel.
+date: "2023-01-02"
 ---
 
-Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
+TypeScript, the superset of JavaScript, has been growing in popularity due to its ability to catch errors during compile-time, improve code readability, and simplify refactoring. With TypeScript's type system, you can enhance the code quality while taking advantage of new features. In this blog post, I’ll dive into the basic types in TypeScript, exploring each one in detail.
 
-By default, Tailwind removes all of the default browser styling from paragraphs, headings, lists and more. This ends up being really useful for building application UIs because you spend less time undoing user-agent styles, but when you _really are_ just trying to style some content that came from a rich-text editor in a CMS or a markdown file, it can be surprising and unintuitive.
+## The Importance of Types in TypeScript
 
-We get lots of complaints about it actually, with people regularly asking us things like:
+Types play a significant role in TypeScript, providing type-checking and error-catching at compile-time. By leveraging the power of types, you can catch errors before they even escalate, enhance code readability for team members, and make refactoring a breeze. Let's dive into the basic types in TypeScript and see how they can benefit your projects.
 
-> Why is Tailwind removing the default styles on my `h1` elements? How do I disable this? What do you mean I lose all the other base styles too?
-> We hear you, but we're not convinced that simply disabling our base styles is what you really want. You don't want to have to remove annoying margins every time you use a `p` element in a piece of your dashboard UI. And I doubt you really want your blog posts to use the user-agent styles either — you want them to look _awesome_, not awful.
+## The Basic Types
 
-The `@tailwindcss/typography` plugin is our attempt to give you what you _actually_ want, without any of the downsides of doing something stupid like disabling our base styles.
+Let's get started with the fun stuff. TypeScript’s type inference feature automatically determines a variable's data type. However, it's generally a good idea to declare data types when initializing variables.
 
-It adds a new `prose` class that you can slap on any block of vanilla HTML content and turn it into a beautiful, well-formatted document:
+We assign data types by simply placing a colon after the variable name but before the equal sign:
 
-```html
-<article class="prose">
-  <h1>Garlic bread with cheese: What the science tells us</h1>
-  <p>
-    For years parents have espoused the health benefits of eating garlic bread
-    with cheese to their children, with the food earning such an iconic status
-    in our culture that kids will often dress up as warm, cheesy loaf for
-    Halloween.
-  </p>
-  <p>
-    But a recent study shows that the celebrated appetizer may be linked to a
-    series of rabies cases springing up around the country.
-  </p>
-</article>
+`const {variable name}: {variable type} = {variable value}`
+
+This is the convention that most TypeScript data types are declared except for functions and objects.
+
+Some data types come with a bit more complex than that, but you get the general idea.  Below are some brief explanations of data types and examples of how to declare them.
+
+### Boolean
+
+The `boolean` type is used to represent true or false values.
+
+```typescript
+let isActive: boolean = true;
 ```
 
-For more information about how to use the plugin and the features it includes, [read the documentation](https://github.com/tailwindcss/typography/blob/master/README.md).
+### Number
 
----
+In TypeScript, all numeric values are represented by the `number` type, including integers and floating-point values.
 
-## What to expect from here on out
+```typescript
+let age: number = 25;
+let weight: number = 68.5;
+```
 
-What follows from here is just a bunch of absolute nonsense I've written to dogfood the plugin itself. It includes every sensible typographic element I could think of, like **bold text**, unordered lists, ordered lists, code blocks, block quotes, _and even italics_.
+### String
 
-It's important to cover all of these use cases for a few reasons:
+The `string` type represents text values.
 
-1.  We want everything to look good out of the box.
-2.  Really just the first reason, that's the whole point of the plugin.
-3.  Here's a third pretend reason though a list with three items looks more realistic than a list with two items.
+```typescript
+let name: string = "John Doe";
+```
 
-Now we're going to try out another header style.
+### Array
 
-### Typography should be easy
+Arrays are used to store collections of values. TypeScript supports two syntaxes for defining arrays: `Type[]` or `Array<Type>`.
 
-So that's a header for you — with any luck if we've done our job correctly that will look pretty reasonable.
+```typescript
+let numbers: number[] = [1, 2, 3];
+let names: Array<string> = ["Alice", "Bob", "Carol"];
+```
 
-Something a wise person once told me about typography is:
+### Tuple
 
-> Typography is pretty important if you don't want your stuff to look like trash. Make it good then it won't be bad.
+Tuples allow you to create an array with a fixed number of elements of known types.
 
-It's probably important that images look okay here by default as well:
+```typescript
+let person: [string, number] = ["John Doe", 25];
+```
 
-<Image src="/blog-post-4.jpg" width="718" height="404" alt="Image" />
+### Enum
 
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+Enums provide a way to create user-defined types with a set of named constants.
 
-Now I'm going to show you an example of an unordered list to make sure that looks good, too:
+```typescript
+enum Color {
+  Red,
+  Green,
+  Blue,
+}
+let color: Color = Color.Red;
+```
 
-- So here is the first item in this list.
-- In this example we're keeping the items short.
-- Later, we'll use longer, more complex list items.
+### Any
 
-And that's the end of this section.
+The `any` type is used when the type is unknown or can change at runtime.
 
-## What if we stack headings?
+```typescript
+let unknownValue: any = 4;
+unknownValue = "A string";
+unknownValue = true;
+```
 
-### We should make sure that looks good, too.
+### Void
 
-Sometimes you have headings directly underneath each other. In those cases you often have to undo the top margin on the second heading because it usually looks better for the headings to be closer together than a paragraph followed by a heading should be.
+The `void` type is typically used as a return type for functions that do not return any value.
 
-### When a heading comes after a paragraph …
-
-When a heading comes after a paragraph, we need a bit more space, like I already mentioned above. Now let's see what a more complex list would look like.
-
-- **I often do this thing where list items have headings.**
-
-  For some reason I think this looks cool which is unfortunate because it's pretty annoying to get the styles right.
-
-  I often have two or three paragraphs in these list items, too, so the hard part is getting the spacing between the paragraphs, list item heading, and separate list items to all make sense. Pretty tough honestly, you could make a strong argument that you just shouldn't write this way.
-
-- **Since this is a list, I need at least two items.**
-
-  I explained what I'm doing already in the previous list item, but a list wouldn't be a list if it only had one item, and we really want this to look realistic. That's why I've added this second list item so I actually have something to look at when writing the styles.
-
-- **It's not a bad idea to add a third item either.**
-
-  I think it probably would've been fine to just use two items but three is definitely not worse, and since I seem to be having no trouble making up arbitrary things to type, I might as well include it.
-
-After this sort of list I usually have a closing statement or paragraph, because it kinda looks weird jumping right to a heading.
-
-## Code should look okay by default.
-
-I think most people are going to use [highlight.js](https://highlightjs.org/) or [Prism](https://prismjs.com/) or something if they want to style their code blocks but it wouldn't hurt to make them look _okay_ out of the box, even with no syntax highlighting.
-
-Here's what a default `tailwind.config.js` file looks like at the time of writing:
-
-```js
-module.exports = {
-  purge: [],
-  theme: {
-    extend: {},
-  },
-  variants: {},
-  plugins: [],
+```typescript
+function logMessage(message: string): void {
+  console.log(message);
 }
 ```
 
-Hopefully that looks good enough to you.
+### Null and Undefined
 
-### What about nested lists?
+Both `null` and `undefined` have their respective types in TypeScript. They are often used as subtypes of other types.
 
-Nested lists basically always look bad which is why editors like Medium don't even let you do it, but I guess since some of you goofballs are going to do it we have to carry the burden of at least making it work.
+```typescript
+let empty: null = null;
+let notDefined: undefined = undefined;
+```
 
-1.  **Nested lists are rarely a good idea.**
-    - You might feel like you are being really "organized" or something but you are just creating a gross shape on the screen that is hard to read.
-    - Nested navigation in UIs is a bad idea too, keep things as flat as possible.
-    - Nesting tons of folders in your source code is also not helpful.
-2.  **Since we need to have more items, here's another one.**
-    - I'm not sure if we'll bother styling more than two levels deep.
-    - Two is already too much, three is guaranteed to be a bad idea.
-    - If you nest four levels deep you belong in prison.
-3.  **Two items isn't really a list, three is good though.**
-    - Again please don't nest lists if you want people to actually read your content.
-    - Nobody wants to look at this.
-    - I'm upset that we even have to bother styling this.
+### Never
 
-The most annoying thing about lists in Markdown is that `<li>` elements aren't given a child `<p>` tag unless there are multiple paragraphs in the list item. That means I have to worry about styling that annoying situation too.
+The `never` type represents a value that never occurs, typically used for functions that always throw an error or have an infinite loop.
 
-- **For example, here's another nested list.**
+```typescript
+function throwError(message: string): never {
+  throw new Error(message);
+}
+```
 
-  But this time with a second paragraph.
+## Type Inference and Type Annotations
 
-  - These list items won't have `<p>` tags
-  - Because they are only one line each
+TypeScript has a powerful type inference system that tries to deduce the types of variables and function return values based on their usage. It means that often, you don't need to explicitly specify types, as the compiler can infer them for you.
 
-- **But in this second top-level list item, they will.**
+```typescript
+let inferredString = "Hello, World!"; // TypeScript infers the type 'string'
+let inferredNumber = 42; // TypeScript infers the type 'number'
+```
 
-  This is especially annoying because of the spacing on this paragraph.
+However, there are cases when the compiler might not be able to infer the correct type or when you want to be more explicit about the types you're using. In such cases, you can use type annotations to explicitly specify the type of a variable or a function's return value.
 
-  - As you can see here, because I've added a second line, this list item now has a `<p>` tag.
+```typescript
+let annotatedString: string = "Hello, World!";
+let annotatedNumber: number = 42;
 
-    This is the second line I'm talking about by the way.
+function add(a: number, b: number): number {
+  return a + b;
+}
+```
 
-  - Finally here's another list item so it's more like a list.
+## Type Aliases and Custom Types
 
-- A closing list item, but with no nested list, because why not?
+Type aliases provide a way to create custom types by either giving a new name to an existing type or defining a new type using a combination of existing types. This can help improve code readability and maintainability by creating more descriptive types tailored to your application.
 
-And finally a sentence to close off this section.
+### Creating a type alias for an existing type
 
-## There are other elements we need to style
+```typescript
+type Age = number;
+let personAge: Age = 30;
+```
 
-I almost forgot to mention links, like [this link to the Tailwind CSS website](https://tailwindcss.com). We almost made them blue but that's so yesterday, so we went with dark gray, feels edgier.
+In this example, we create a type alias `Age` for the `number` type, making it more descriptive and specific to our application.
 
-We even included table styles, check it out:
+### Defining a new type using a combination of existing types
 
-| Wrestler                | Origin       | Finisher           |
-| ----------------------- | ------------ | ------------------ |
-| Bret "The Hitman" Hart  | Calgary, AB  | Sharpshooter       |
-| Stone Cold Steve Austin | Austin, TX   | Stone Cold Stunner |
-| Randy Savage            | Sarasota, FL | Elbow Drop         |
-| Vader                   | Boulder, CO  | Vader Bomb         |
-| Razor Ramon             | Chuluota, FL | Razor's Edge       |
+```typescript
+type Point = {
+  x: number;
+  y: number;
+};
 
-We also need to make sure inline code looks good, like if I wanted to talk about `<span>` elements or tell you the good news about `@tailwindcss/typography`.
+let point: Point = {
+  x: 5,
+  y: 10,
+};
+```
 
-### Sometimes I even use `code` in headings
+Here, we create a new custom type called `Point` using an object type with two properties, `x` and `y`. This makes it easier to understand the structure of the object and its purpose in our application.
 
-Even though it's probably a bad idea, and historically I've had a hard time making it look good. This _"wrap the code blocks in backticks"_ trick works pretty well though really.
+### Using union types with type aliases
 
-Another thing I've done in the past is put a `code` tag inside of a link, like if I wanted to tell you about the [`tailwindcss/docs`](https://github.com/tailwindcss/docs) repository. I don't love that there is an underline below the backticks but it is absolutely not worth the madness it would require to avoid it.
+Type aliases can also be combined with union types, allowing you to create a custom type that can hold different values.
 
-#### We haven't used an `h4` yet
+```typescript
+type StringOrNumber = string | number;
 
-But now we have. Please don't use `h5` or `h6` in your content, Medium only supports two heading levels for a reason, you animals. I honestly considered using a `before` pseudo-element to scream at you if you use an `h5` or `h6`.
+let inputValue: StringOrNumber = "TypeScript";
+inputValue = 42;
+```
 
-We don't style them at all out of the box because `h4` elements are already so small that they are the same size as the body copy. What are we supposed to do with an `h5`, make it _smaller_ than the body copy? No thanks.
+In this example, we create a type alias called `StringOrNumber` that can hold either a `string` or a `number`. This provides flexibility in our application while maintaining type safety
 
-### We still need to think about stacked headings though.
+## Union and Intersection Types
 
-#### Let's make sure we don't screw that up with `h4` elements, either.
+Union and intersection types play crucial roles in creating complex type definitions, allowing developers to combine types in flexible and powerful ways.
 
-Phew, with any luck we have styled the headings above this text and they look pretty good.
+### Union types
 
-Let's add a closing paragraph here so things end with a decently sized block of text. I can't explain why I want things to end that way but I have to assume it's because I think things will look weird or unbalanced if there is a heading too close to the end of the document.
+Union types represent a value that can be of one of several types. It is denoted using the `|` symbol between the types.
 
-What I've written here is probably long enough, but adding this final sentence can't hurt.
+```typescript
+type StringOrNumber = string | number;
 
-## GitHub Flavored Markdown
+function printValue(value: StringOrNumber) {
+  console.log(value);
+}
 
-I've also added support for GitHub Flavored Mardown using `remark-gfm`.
+printValue("Hello, World!");
+printValue(42);
+```
 
-With `remark-gfm`, we get a few extra features in our markdown. Example: autolink literals.
+In this example, the `StringOrNumber` type is a union type that can be either a `string` or a `number`. The `printValue` function accepts a parameter of this union type, allowing it to handle both strings and numbers.
 
-A link like www.example.com or https://example.com would automatically be converted into an `a` tag.
+### Intersection types
 
-This works for email links too: contact@example.com.
+Intersection types are used to combine multiple types into one, creating a new type that includes all the properties of the original types. It is denoted using the `&` symbol between the types.
+
+```typescript
+type A = {
+  a: string;
+};
+
+type B = {
+  b: string;
+};
+
+type C = A & B;
+
+let objectC: C = {
+  a: "Hello",
+  b: "World",
+};
+```
+
+In this example, the `C` type is an intersection type that combines the properties of both `A` and `B`. The `objectC` variable must have both `a` and `b` properties, as defined by the intersection type.
+
+## That's a wrap!!
+
+Understanding and utilizing TypeScript's basic types can have a significant impact on the quality of your code. It helps catch errors during compile time, improves code readability, and simplifies refactoring. As you continue to work with TypeScript, you'll discover even more benefits of this powerful language. I encourage you to explore TypeScript further and apply these concepts to your own projects, creating more robust and maintainable codebases. See you in next one 👋
