--- a/content/posts/types-in-typescript.mdx
+++ b/content/posts/types-in-typescript.mdx
@@ -1,8 +1,10 @@
 ---
-title: Deploying Next.js Apps
-description: How to deploy your Next.js apps on Vercel.
-date: "2023-01-02"
+title: Understanding Basic Types in TypeScript
+description: TypeScript, the superset of JavaScript, has been growing in popularity due to its ability to catch errors during compile-time, improve..
+date: "2023-05-08"
 ---
+
+<Image src="/blog-post-1.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
 
 TypeScript, the superset of JavaScript, has been growing in popularity due to its ability to catch errors during compile-time, improve code readability, and simplify refactoring. With TypeScript's type system, you can enhance the code quality while taking advantage of new features. In this blog post, I’ll dive into the basic types in TypeScript, exploring each one in detail.
 
