Add blog images

--- a/content/posts/become-next-expert.mdx
+++ b/content/posts/become-next-expert.mdx
@@ -4,6 +4,9 @@ description: I had a plan to directly jump on to explanations but read somewhere
 date: "2023-05-14"
 ---
 
+<Image src="/blog-images/blog-8/blog-8-1.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
+
 You’ve been learning NextJS for a while now, and you are getting pretty good at it. Congrats,  that's awesome! But as we all know learning never stops, especially in this fast-paced world of NextJS. So, you might be thinking what’s next then? Checking out how folks in the open source are using NextJS for building real-world apps should be your next step.
 
 Open-source projects are the best way to level up your knowledge. They're kind of like a sneak peek into how all those NextJs concepts you've learned are put to use in the wild. Plus, they're a great place to see how the experts in the field tackle problems. So, I’ve put together a list of some really cool and popular open-source projects built with NextJS.
@@ -14,31 +17,36 @@ Open source isn't just about learning; it's about joining in too. So if you’re
 
 [Cal.com](http://Cal.com) is an awesome open-source scheduling tool. Think of it like a cooler version of Calendly and it's super user-friendly too. And guess what? It's not just some small project. It's actually one of the best and biggest open-source Next projects out there. You’ll definitely learn a lot from this.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1684053906051/dffcdb43-fc80-4a6f-bf1d-1ecd36acbcbf.png align="center")
+<Image src="/blog-images/blog-8/blog-8-2.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 ## Dub
 
 [Dub](https://dub.sh/) is an open-source link management tool for modern marketing teams to create, share, and track short links. Again, you can think of it as a better version of Bitly. It's built by the awesome Steven Tey, and he keeps sharing updates regarding the project on Twitter, definitely worth the follow.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1684053966939/aea2e27c-9dd0-4ab1-84d1-8ae1cc836fa2.png align="center")
+<Image src="/blog-images/blog-8/blog-8-3.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 ## RoomGPT
 
 [RoomGPT](https://www.roomgpt.io/) is the coolest open-source project on the list, you should definitely check it out. It's like your personal interior designer but instead of a human, it's all powered by AI. Got a messy room? No problem. Just take a picture, upload it to RoomGPT, and within seconds, you get a fresh, redesigned look.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1684054138221/85103d2f-ce09-4a18-b6b2-e58870918c49.png align="center")
+<Image src="/blog-images/blog-8/blog-8-4.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 ## React email
 
 [React email](https://react.email/) is a collection of high-quality, unstyled components for creating beautiful emails using React and TypeScript. It reduces the pain of coding responsive emails and also comes with dark mode support. It also takes care of inconsistencies between Gmail, Outlook, and other email clients for you. A great resource again, you’ll definitely learn a lot.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1684054205476/a93be682-fb13-429e-9294-78d0efe4557d.png align="center")
+<Image src="/blog-images/blog-8/blog-8-5.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 ## Taxonomy
 
 [Taxonomy](https://tx.shadcn.com/) is not an actual app, but a demo app built using NextJS’s latest app directory. I have learned a lot from it regarding the best practices, the file structure and so much more. Based on the new app directory, it's an open-source project built by Shadcn with all the features you need to get started like authentication,  payment integration using stripe, docs, and blog using mdx and content layer, ORM, database. You say it, you have it.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1684054283868/486cb105-1134-4497-b2c8-b890cb9be259.png align="center")
+<Image src="/blog-images/blog-8/blog-8-6.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 ## That’s all!
 
