--- a/content/posts/call-apply-bind.mdx
+++ b/content/posts/call-apply-bind.mdx
@@ -4,6 +4,14 @@ description: I had a plan to directly jump on to explanations but read somewhere
 date: "2022-01-15"
 ---
 
+<Image
+  src="/blog-images/blog-5.jpg"
+  width="718"
+  height="404"
+  alt="Image"
+  className="rounded-2xl"
+/>
+
 I had a plan to directly jump on to explanations but read somewhere, you need to tell a story first in your blog to grab the attention of your audience, have been trying to think of a story for the last 8 hours, but no success till now😶. Thought why not make the explanation so interesting that you don't need any story👀, so let's start..
 
 As usual, before jumping to the actual explanation we'll see what the official docs have to say
@@ -13,8 +21,6 @@ As usual, before jumping to the actual explanation we'll see what the official d
 **MDN Web Docs**
 
 > The call() method calls a function with a given this value and arguments provided individually.
-
-%[https://media.giphy.com/media/tLql6mMHC6wvK/giphy.gif] 
 
 I swear I didn't get a thing when I read it at first. No worries, this won't happen to you. Enough talking, let's understand it
 
@@ -35,13 +41,13 @@ Let's see one more example
 
 ```typescript
 let blockchain = {
-    name: "Ethereum",
-    printDetail: function () {
+  name: "Ethereum",
+  printDetail: function () {
     console.log("The blockchain is " + this.name);
   },
 };
 
-blockchain.printDetail();   //The blockchain is Ethereum
+blockchain.printDetail(); //The blockchain is Ethereum
 ```
 
 It works as expected. By the way, for those who don't know what "THIS" keyword is, THIS refers to the object it belongs to. Details [here](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/this).
@@ -51,7 +57,7 @@ Now suppose we have one more object, call it otherBlockchain👇
 ```typescript
 let otherBlockchain = {
   name: "Solana",
- };
+};
 ```
 
 Now if we want to print this again like the previous one, what should we do, create a function again in 'otherBlockchain' object? No, this won't be right due to code repetition. Then what should we do? We should try to find some way to use printDetail() function of the 'blockchain' object. This is where call() method comes to the rescue. With help of it, we can borrow function from one object and use it with another object.
@@ -72,10 +78,10 @@ let printDetail() = function() {
 }
 
 let blockchain = {
-  name: "Ethereum",  
+  name: "Ethereum",
 };
 
-printDetail.call(blockchain) //The blockchain is Ethereum 
+printDetail.call(blockchain) //The blockchain is Ethereum
 
 let otherBlockchain = {
   name: "Solana",
@@ -95,7 +101,7 @@ let printDetail() = function(founder, year) {
 How we will pass arguments to printDetail() function while invoking it? Like this👇
 
 ```typescript
-printDetail.call(blockchain, "Vitalik Buterin", 2015) //The blockchain is Ethereum founded by Vitalik Buterin in 2015
+printDetail.call(blockchain, "Vitalik Buterin", 2015); //The blockchain is Ethereum founded by Vitalik Buterin in 2015
 ```
 
 The first argument will always be the reference to this variable (the object to which we want to attach the function) and the arguments after that can be the arguments to the function. This was all about call().
@@ -109,7 +115,7 @@ MDN Web Docs
 Apply() is exactly similar to the call() we saw above, the only difference is the way we pass arguments.👇
 
 ```typescript
-printDetail.call(blockchain, ["Vitalik Buterin", 2015]) //The blockchain is Ethereum founded by Vitalik Buterin in 2015
+printDetail.call(blockchain, ["Vitalik Buterin", 2015]); //The blockchain is Ethereum founded by Vitalik Buterin in 2015
 ```
 
 Here, we have passed the arguments to the function in an ArrayList. Yes, this is the only difference between the two.
@@ -123,8 +129,7 @@ MDN Web Docs
 Bind() method also looks exactly like the call() method, but the catch here is, instead of calling the function directly, it binds the method with the object and returns the copy of the method.
 
 ```typescript
-
-let blockchainDetail = printDetail.call(blockchain, "Vitalik Buterin", 2015) ;
+let blockchainDetail = printDetail.call(blockchain, "Vitalik Buterin", 2015);
 
 blockchainDetail(); //The blockchain is Ethereum founded by Vitalik Buterin in 2015
 ```
