--- a/content/posts/js-hoisting.mdx
+++ b/content/posts/js-hoisting.mdx
@@ -4,6 +4,9 @@ description: “HOISTING”, when we hear or read it somewhere the first time, i
 date: "2022-01-12"
 ---
 
+<Image src="/blog-images/blog-4/blog-4-1.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
+
 
 “HOISTING”, when we hear or read it somewhere the first time, it seems to be such a complex word. At least, that was the case with me. Don’t worry let’s make it easy.
 
@@ -58,7 +61,8 @@ So, when we try to access the variable it shows us undefined but when we try to 
 
 Let’s come to the point now, whenever you run your JS Program, an execution context is created. Assume Execution context is like a big box inside which everything takes place. This big box has two components and there is a Memory component and a code component. Inside the memory component, all variables and functions are stored as key-value pairs and inside the code component, the code is executed one line at a time.
 
-![Frame 3.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1641988966471/cekOTu7p66.png align="left")
+<Image src="/blog-images/blog-4/blog-4-2.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 Memory component is also known as Variable Environment and Code component is also known as Thread of Execution
 
@@ -77,7 +81,8 @@ function bar() {
 }
 ```
 
-![Frame 3.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1641989613452/1nE2mHnQo.png align="left")
+<Image src="/blog-images/blog-4/blog-4-3.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
 
 During the memory creation phase, JavaScript will scan for all variables and functions allocate space for them in the memory component. Till now not a single line of your program has been executed. It will allocate space for the “foo” variable and “bar” function.
 
