--- a/content/posts/js-projects-beginners.mdx
+++ b/content/posts/js-projects-beginners.mdx
@@ -4,6 +4,9 @@ description: Hello Coders, When we start with our programming journey we tend to
 date: "2021-03-27"
 ---
 
+<Image src="/blog-images/blog-2.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+
+
 Hello Coders, When we start with our programming journey we tend to get confused at every step we take, but no worries this happens with everyone, you're not alone. 
 
 In this blog, I am going to share with you some simple projects, which can help you get started. If you think you can build them easily you can skip them and build some intermediate projects.
