--- a/content/posts/programming-for-everyone.mdx
+++ b/content/posts/programming-for-everyone.mdx
@@ -3,6 +3,7 @@ title: Is programming for Everyone..?🤔
 description: So, What do you think? According to me, it depends on an individual. If a person decides to enter programming with a Never..
 date: "2021-09-05"
 ---
+<Image src="/blog-images/blog-3.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
 
 So, What do you think? According to me, it depends on an individual. If a person decides to enter programming with a Never Give Up attitude then sure he can do it but if someone has already made his mind that it is not for me, then nothing can change it. It is a person's attitude that decides if he is going to be successful in the field chosen by him or not.
 
