--- a/content/posts/the-programming-basics.mdx
+++ b/content/posts/the-programming-basics.mdx
@@ -4,6 +4,7 @@ description: Hello 👋 Coders, This is my first blog post so thought why not co
 date: "2021-03-23"
 ---
 
+<Image src="/blog-images/blog-1.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
 
 Hello 👋 Coders, This is my first blog post so thought why not cover the basics as it will be easy for me to start with and easy for you to understand if you're beginning your coding journey.
 
