--- a/content/posts/types-in-typescript.mdx
+++ b/content/posts/types-in-typescript.mdx
@@ -4,7 +4,7 @@ description: TypeScript, the superset of JavaScript, has been growing in popular
 date: "2023-05-08"
 ---
 
-<Image src="/blog-post-1.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
+<Image src="/blog-images/blog-6.jpg" width="718" height="404" alt="Image" className="rounded-2xl" />
 
 TypeScript, the superset of JavaScript, has been growing in popularity due to its ability to catch errors during compile-time, improve code readability, and simplify refactoring. With TypeScript's type system, you can enhance the code quality while taking advantage of new features. In this blog post, I’ll dive into the basic types in TypeScript, exploring each one in detail.
 
